force-app/main/default/objects/Location_Relationship__c/Location_Relationship__c.object-meta.xml
<CustomObject>
    <label>Location Relationship</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Number Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Relationship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>