force-app/main/default/objects/Location_Relationship__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Locations__c</referenceTo>
    <relationshipLabel>Location Relationship</relationshipLabel>
    <relationshipName>Location_Relationship</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>