force-app/main/default/objects/Location_Relationship__c/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <formula>TEXT(Contact__r.Type__c)</formula>
    <label>Role Type</label>
    <type>Text</type>
</CustomField>